fix alignment #4

--- a/packages/voismart-phone/client/views/phone.less
+++ b/packages/voismart-phone/client/views/phone.less
@@ -115,7 +115,7 @@
 		z-index: 1;
 	}
 	.phonestream {
-		object-fit:contain;
+		object-fit:cover;
 		position: absolute;
 		width: 100%;
 		height: 100%;
@@ -124,7 +124,7 @@
 	.localphonestream {
 		position: absolute;
 		height: 20%;
-		right: 19%;
+		right: 0;
 		z-index: 2;
 		opacity: 0.75;
 	}
